EIP1-9922-bespoke-comm-preview
